# holos

./: .gitignore  Makefile.am  README  README.md  \  \.pub  configure  configure.ac
autom4te.cache/: output.0  output.2  traces.0  traces.1
doc/: holos.fn  holos.fns  holos.texi  holos.tp  holos.tps
include/cli/: cli.h
include/core/ai/: cnn.h  gan.h  mlp.h  rnn.h  transformer.h
include/core/forge/: forge.h
include/core/p2p/: p2p.h
include/core/phys/em/: circuit_analysis.h  lorentz_forces.h  maxwell.h  wave_equations.h
include/core/phys/fields/: qft.h
include/core/phys/mech/clasical/: kinematics.h  oscillations.h  statics.h
include/core/phys/mech/classical/: dynamics.h  fluids.h  kinematics.h  oscillations.h  statics.h
include/core/phys/nuclear/: fission_fusion.h  nuclear_decay.h  nuclear_forces.h
include/core/phys/ss/: band_structure.h  crystal_lattice.h  phonons.h
include/core/phys/thermo/: entropy.h  heat_transfer.h  thermodynamics.h
include/core/tech/: tech.h
include/mechanics/clasical/: dynamics.h  fluids.h  oscillations.h
src/cli/: cli.c
src/core/eng/tech/chem/: README
src/core/eng/tech/energy/: README
src/core/forge/: README
src/core/phys/mech/classical/: dynamics.c
src/core/tech/comp/: README
src/core/tech/control/: README
src/core/tech/fluid/: README
src/core/tech/mat/: README
src/core/tech/mech/: README
src/core/tech/optics/: README
src/p2p/: p2p.c
src/ui/cli/: cli.c
src/ui/gui/: gui.c
